@@ -7,6 +7,6 @@ Standards-Version: 4.3.0
 
 Package: python3-cyberfusion-queue-support
 Architecture: all
-Depends: python3, sqlite3, alembic, sudo, python3-dotenv, ${python3:Depends}, ${misc:Depends}
+Depends: python3, sqlite3, alembic, sudo, python3-dotenv, tuxis-cron, ${python3:Depends}, ${misc:Depends}
 Description: Library to queue actions.
  Library to queue actions.
