@@ -1,0 +1,1 @@
+53 8 * * * root /usr/bin/tuxis-cron /etc/cronscripts/purge-queues.cron
