@@ -23,6 +23,7 @@ dependencies = [
 
 [project.scripts]
 queue-support-migrate = "cyberfusion.QueueSupport.database:run_migrations"
+queue-support-purge-queues = "cyberfusion.QueueSupport.scripts.purge_queues:main"
 
 [tool.coverage.run]
 omit = [
