@@ -1,4 +1,5 @@
 coverage==7.10.5
+Faker==37.4.2
 pytest==8.4.1
 pytest-cov==6.2.1
 pytest-mock==3.14.1
