@@ -5,6 +5,7 @@ python3-cyberfusion-queue-support (3.0) unstable; urgency=medium
   * Let `Queue.process` return queue process
   * RmTreeItem: add min_depth
   * RmTreeItem: require absolute path
+  * Purge queues
 
  -- William Edwards <wedwards@cyberfusion.nl>  Wed, 27 Aug 2025 00:30:00 +0000
 
